--- a/src/components/molecules/typeahead/Typeahead.css
+++ b/src/components/molecules/typeahead/Typeahead.css
@@ -7,7 +7,7 @@
   
   .TypeAhead label {
     margin-bottom: 5px;
-    display: flex;
+    display: none;
   }
   
   .TypeAhead__options {
@@ -18,24 +18,28 @@
   
   .TypeAhead__input,
   .TypeAhead__options {
-    border-radius: 4px;
-    border: 1px solid #c6ccd5;
+    border-radius: 15px;
+    border: 1px solid transparent;
+    background-color: var(--bg-01);
     outline: none;
     margin-bottom: 8px;
-    color: #132437;
+    color: var(--black-01);
     font-size: 14px;
     padding: 0;
   }
   
   .TypeAhead__input {
-    padding: 6px 8px;
+    padding: 11px 20px;
     display: flex;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 22px;
     width: 100%;
   }
   
   .TypeAhead__option {
     padding: 6px 8px;
-    color: #132437;
+    color: var(--black-01);
     font-size: 14px;
     cursor: pointer;
   }
