--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+:root {
+  --spacing-01: 8px;
+  --spacing-02: 16px;
+  --spacing-03: 24px;
+  --black-01: #2C2C2C;
+  --black02: #9A9A9A;
+  --black03: #C4C4C4;
+  --bg-01: #FDFCFC;
+  --bg-02: #d7e9fc61;
+}
 body {
   margin: 0;
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,3 +25,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
