--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
   --spacing-01: 8px;
   --spacing-02: 16px;
   --spacing-03: 24px;
-  --black-01: #121719;
-  --black-02: #6d8896;
-  --black-03: #a3cbe1;
+  --text-01: #121719;
+  --text-02: #6d8896;
+  --text-03: #a3cbe1;
   --bg-01: #f8fcff;
   --bg-02: #e9f6fe;
 }
